--- a/UserService/package.json
+++ b/UserService/package.json
@@ -14,6 +14,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.1.2",
     "dotenv": "^16.5.0",
