update package.json to use TypeScript entry point and improve dev script

--- a/UserService/package.json
+++ b/UserService/package.json
@@ -2,9 +2,9 @@
   "name": "user-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "tsc && nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
