--- a/AdminService/package.json
+++ b/AdminService/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"tsc -w\" \" nodemon dist/index.js\"",
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +15,9 @@
     "@types/express": "^5.0.2",
     "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "concurrently": "^9.1.2"
+    
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
